# haskellX2019

./: .gitignore  Makefile  slides.tex  stack.yaml
code/: exchange2019.cabal
code/src/Control/Monad/: Delay.hs  Probability.hs  Race.hs
code/src/Control/Monad/Delay/: Class.hs  DelayT.hs
code/src/Control/Monad/Probability/: Class.hs  List.hs  Sample.hs
code/src/Control/Monad/Race/: Class.hs  Discrete.hs  Sample.hs
code/src/Data/: Prob.hs
code/src/Examples/: Diamond.hs  Dice.hs  MontyHall.hs
